--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #f8f8f8;
+}
+
 .trigger {
   font-size: 18px;
   line-height: 64px;
@@ -12,6 +16,6 @@
 
 .logo {
   height: 32px;
-  background: rgba(255,255,255,.2);
+  background: rgba(255, 255, 255, .2);
   margin: 16px;
 }
