--- a/src/views/login/index.less
+++ b/src/views/login/index.less
@@ -1,9 +1,26 @@
 .login-form {
   max-width: 300px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -160px 0 0 -160px;
+  width: 420px;
+  height: 350px;
+  padding: 36px;
+  -webkit-box-shadow: 0 0 100px rgba(0, 0, 0, .08);
+  box-shadow: 0 0 100px rgba(0, 0, 0, .08);
 }
+
 .login-form-forgot {
   float: right;
 }
+
 .login-form-button {
   width: 100%;
+}
+.logo{
+  text-align: center;
+  img{
+    height: 20px;
+  }
 }
