--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -14,10 +14,35 @@ body {
   color: #1890ff;
 }
 
+.login-form {
+  max-width: 300px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -160px 0 0 -160px;
+  width: 420px;
+  height: 350px;
+  padding: 36px;
+  -webkit-box-shadow: 0 0 100px rgba(0, 0, 0, .08);
+  box-shadow: 0 0 100px rgba(0, 0, 0, .08);
+}
+
+.login-form-forgot {
+  float: right;
+}
+
+.login-form-button {
+  width: 100%;
+}
+
 .logo {
+  text-align: center;
   height: 32px;
   background: rgba(255, 255, 255, .2);
   margin: 16px;
+  img {
+    height: 20px;
+  }
 }
 
 /* use css to set position of modal */
